# cesibot1

./: .gitignore  frames_2026-01-26_10.57.27.gv  frames_2026-01-26_11.00.51.gv  frames_2026-03-23_19.40.30.gv
src/amr_robot/: CMakeLists.txt  package.xml
src/amr_robot/launch/: description.launch.py
src/amr_robot/urdf/: base.xacro  gazebo.xacro  properties.xacro  robot.urdf.xacro  sensors.xacro  wheels.xacro
src/robot_bringup/: CMakeLists.txt  package.xml
src/robot_bringup/config/: ekf.yaml  laser_filters.yaml
src/robot_bringup/launch/: bringup.launch.py  lidar.launch.py
src/robot_bringup/rviz/: robot.rviz
src/robot_drive/: package.xml  setup.cfg  setup.py
src/robot_drive/robot_drive/: diff_drive_node.py  ir_sensor_node.py  keyboard_control.py  node.py
src/robot_navigation/: CMakeLists.txt  package.xml
src/robot_navigation/config/: nav2_params.yaml  slam_params.yaml
src/robot_navigation/launch/: localization.launch.py  navigation.launch.py  slam.launch.py
src/vive_tracker_bridge/: package.xml  setup.cfg  setup.py
src/vive_tracker_bridge/vive_tracker_bridge/: analyze_tracker_logs.py  position_vs_time.py  tracker_log.csv  tracker_logger.py  tracker_node.py  tracker_trajectory_on_map.py
